--- a/elibrary-controller/src/main/resources/templates/login.html
+++ b/elibrary-controller/src/main/resources/templates/login.html
@@ -12,15 +12,6 @@
     <script type="text/javascript" src="/js/jquery-3.6.0.min.js"></script>
     <script type="text/javascript" src="/js/bootstrap.min.js"></script>
     <script type="text/javascript" src="/js/js.cookie.js"></script>
-
-    <!-- OAuth20 -->
-    <script type="text/javascript">
-        $.get("/user", function (data) {
-            $("#user").html(data.name);
-            $(".unauthenticated").hide()
-            $(".authenticated").show()
-        });
-    </script>
 </head>
 
 <body>
@@ -38,13 +29,12 @@
         <form action="#" th:action="@{login}" method="post">
             <h2>Please log in</h2>
             <div>
-                <label for="username" class="form-label invisible">Username</label>
-                <input type="text" id="username" name="username" class="form-control" placeholder="Username" required
-                       autofocus>
+                <label for="email" class="form-label invisible">Email</label>
+                <input type="text" id="email" name="email" class="form-control" placeholder="Email" required autofocus>
             </div>
             <div>
                 <label for="password" class="from-label invisible">Password</label>
-                <input type="password" id="password" name="password" class="form-control" placeholder="Password"
+                <input type="password" id="password" name="password" class="form-control rounded" placeholder="Password"
                        required>
             </div>
             <div class="mt-4 d-grid gap-2">
@@ -58,39 +48,13 @@
 
         <div>
             <div class="d-inline text-center">
-                <form action="/signin/facebook" class="mb-2" method="POST">
-                    <!-- value="email, birthday, gender, profile_pic, public_profile" - no -->
-                    <input type="hidden" name="scope" value="email, public_profile"/>
-                    <button type="submit" class="btn btn-secondary btn-sm">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
-                             class="bi bi-facebook" viewBox="0 0 16 16">
-                            <path d="M16 8.049c0-4.446-3.582-8.05-8-8.05C3.58 0-.002 3.603-.002 8.05c0 4.017 2.926 7.347 6.75 7.951v-5.625h-2.03V8.05H6.75V6.275c0-2.017 1.195-3.131 3.022-3.131.876 0 1.791.157 1.791.157v1.98h-1.009c-.993 0-1.303.621-1.303 1.258v1.51h2.218l-.354 2.326H9.25V16c3.824-.604 6.75-3.934 6.75-7.951z"></path>
-                        </svg>
-                        Facebook
-                    </button>
-                </form>
-            </div>
-            <div class="d-inline text-center">
-                <form action="/signin/google" class="mb-2" method="POST">
-                    <!-- <input type="hidden" name="scope" value="https://www.googleapis.com/auth/userinfo.profile https://www.googleapis.com/auth/userinfo.email"/>-->
-                    <input type="hidden" name="redirect_uri" value="http://localhost:8080/"/>
-                    <button type="submit" class="btn btn-secondary btn-sm">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
-                             class="bi bi-google" viewBox="0 0 16 16">
-                            <path d="M15.545 6.558a9.42 9.42 0 0 1 .139 1.626c0 2.434-.87 4.492-2.384 5.885h.002C11.978 15.292 10.158 16 8 16A8 8 0 1 1 8 0a7.689 7.689 0 0 1 5.352 2.082l-2.284 2.284A4.347 4.347 0 0 0 8 3.166c-2.087 0-3.86 1.408-4.492 3.304a4.792 4.792 0 0 0 0 3.063h.003c.635 1.893 2.405 3.301 4.492 3.301 1.078 0 2.004-.276 2.722-.764h-.003a3.702 3.702 0 0 0 1.599-2.431H8v-3.08h7.545z"></path>
-                        </svg>
-                        Google
-                    </button>
-                </form>
-            </div>
-            <div class="d-inline text-center">
                 <form action="/oauth2/authorization/google" class="mb-2" method="get">
                     <button type="submit" class="btn btn-secondary btn-sm">
                         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
                              class="bi bi-google" viewBox="0 0 16 16">
                             <path d="M15.545 6.558a9.42 9.42 0 0 1 .139 1.626c0 2.434-.87 4.492-2.384 5.885h.002C11.978 15.292 10.158 16 8 16A8 8 0 1 1 8 0a7.689 7.689 0 0 1 5.352 2.082l-2.284 2.284A4.347 4.347 0 0 0 8 3.166c-2.087 0-3.86 1.408-4.492 3.304a4.792 4.792 0 0 0 0 3.063h.003c.635 1.893 2.405 3.301 4.492 3.301 1.078 0 2.004-.276 2.722-.764h-.003a3.702 3.702 0 0 0 1.599-2.431H8v-3.08h7.545z"></path>
                         </svg>
-                        Google 2
+                        Google
                     </button>
                 </form>
             </div>
@@ -113,7 +77,7 @@
                              class="bi bi-facebook" viewBox="0 0 16 16">
                             <path d="M16 8.049c0-4.446-3.582-8.05-8-8.05C3.58 0-.002 3.603-.002 8.05c0 4.017 2.926 7.347 6.75 7.951v-5.625h-2.03V8.05H6.75V6.275c0-2.017 1.195-3.131 3.022-3.131.876 0 1.791.157 1.791.157v1.98h-1.009c-.993 0-1.303.621-1.303 1.258v1.51h2.218l-.354 2.326H9.25V16c3.824-.604 6.75-3.934 6.75-7.951z"></path>
                         </svg>
-                        Facebook 2
+                        Facebook
                     </button>
                 </form>
             </div>
@@ -121,7 +85,7 @@
     </div>
 
     <footer class="modal-footer">
-        <span>Copyright © 2021, All Right Reserved Ales'</span>
+        <span>Copyright © 2021, All Right Reserved Aliaksandr Rachko</span>
     </footer>
 </div>
 </body>
