Add Book, BookDto, BookMapper, BookService, BookRestController. UserService works.

--- a/elibrary-controller/src/main/resources/templates/home.html
+++ b/elibrary-controller/src/main/resources/templates/home.html
@@ -11,8 +11,7 @@
     <link rel="canonical" href="https://getbootstrap.com/docs/5.0/examples/starter-template/">
 
     <!-- Bootstrap core CSS -->
-    <link href="/css/bootstrap.min.css" rel="stylesheet"
-          integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
+    <link href="/css/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous">
 
     <!-- Favicons -->
     <link rel="icon" href="/img/favicons/final-ico.png" sizes="32x32" type="image/png">
@@ -105,8 +104,6 @@
     </div>
 </footer>
 
-<script src="/js/bootstrap.bundle.min.js"
-        integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0"
-        crossorigin="anonymous"></script>
+<script src="/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
 </body>
 </html>
