--- a/elibrary-controller/src/main/resources/templates/login.html
+++ b/elibrary-controller/src/main/resources/templates/login.html
@@ -6,8 +6,7 @@
     <meta name="description" content="Log in page">
     <meta name="author" content="Ales'">
     <title>Please sign in</title>
-    <link href="/css/bootstrap.min.css" rel="stylesheet"
-          integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
+    <link href="/css/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous">
     <link href="/css/signin.css" rel="stylesheet" crossorigin="anonymous"/>
     <script type="text/javascript" src="/js/jquery-3.6.0.min.js"></script>
     <script type="text/javascript" src="/js/bootstrap.min.js"></script>
