--- a/elibrary-controller/src/main/resources/templates/books/bookInfo.html
+++ b/elibrary-controller/src/main/resources/templates/books/bookInfo.html
@@ -14,24 +14,8 @@
     <link href="/css/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous">
 
     <!-- Favicons -->
-    <link rel="icon" href="/img/favicons/final-ico.png" sizes="32x32" type="image/png">
+    <link rel="icon" href="/img/favicons/openBook.png" sizes="32x32" type="image/png">
     <meta name="theme-color" content="#7952b3">
-
-    <style>
-        .bd-placeholder-img {
-            font-size: 1.125rem;
-            text-anchor: middle;
-            -webkit-user-select: none;
-            -moz-user-select: none;
-            user-select: none;
-        }
-
-        @media (min-width: 768px) {
-            .bd-placeholder-img-lg {
-                font-size: 3.5rem;
-            }
-        }
-    </style>
 
     <!-- Custom styles for this template -->
     <link href="/css/starter-template.css" rel="stylesheet">
@@ -71,6 +55,7 @@
             <div class="d-flex">
                 <div th:object="${currentUser}">
                     <div th:if="${currentUser != null}">
+                        <a class="btn btn btn-outline-secondary" th:href="@{'/subscription'}">My subscriptions</a>
                         <a class="btn btn btn-outline-primary" th:href="@{'/users/info'}" th:text="*{username}"></a>
                         <a class="btn btn-outline-danger" href="/logout">Log out</a>
                     </div>
@@ -97,34 +82,83 @@
             </tr>
             </thead>
             <tbody>
-            <tr>
+            <tr th:object="${book}">
                 <th scope="row">
                     <!--/*@thymesVar id="book" type="by.it.academy.grodno.elibrary.api.dto.books.BookDto"*/-->
                     <img class="rounded" src="#" th:src="${book.pictureUrl}" alt="no picture" width="200"/>
                 </th>
                 <th scope="row">
-                    <h6 class="text-sm-start m-0" th:text="'N' + ${book.id}"></h6>
+                    <h6 class="text-sm-start text-muted m-0" th:text="'N' + ${book.id}"></h6>
+                    <span class="text-start">
+                    <small class="text-muted" th:text="${book.getCategory().getCategoryPath()+ '/'}"></small>
+                    <small><a class="text-sm-start m-0 link-primary" th:href="@{/books(categoryId=${book.getCategory().getId()})}"
+                             th:text="${book.getCategory().getCategoryName}"></a></small></span>
                     <!--/*@thymesVar id="book" type="by.it.academy.grodno.elibrary.api.dto.books.BookDto"*/-->
                     <h2 class="text-sm-start mt-2" th:text="${book.title}"></h2>
                     <h5 class="text-sm-start m-0">
                         <span th:each="authorName : ${book.authors}" th:text="${authorName} + ', '"></span>
                         <span th:text="${book.datePublishing}"></span>
                     </h5>
+
                     <h5 class="text-sm-start mt-1" th:text="'Publisher: ' + ${book.publisher}"></h5>
-                    <h6 class="text-sm-start mt-2" th:text="'Description: ' + ${book.description.substring(0, 200) + '...'}"></h6>
+                    <h5 class="text-sm-start mt-1 border-top" th:text="'ISBN-10: ' + ${book.isbn10}"></h5>
+                    <h5 class="text-sm-start mt-1 border-bottom" th:text="'ISBN-10: ' + ${book.isbn13}"></h5>
+                    <h5 class="text-sm-start mt-1" th:text="'Language: ' + ${book.language}"></h5>
+                    <h5 class="text-sm-start mt-1" th:text="'Print length: ' + ${book.printLength}"></h5>
+                    <h6 class="text-sm-start mt-2" th:text="'Description: ' + ${book.description}"></h6>
                     <h6 class="text-sm-start mt-4">
                         <span th:text="'Total count: ' + ${book.totalCount} + '. '"></span>
                         <span th:text="'Available count: ' + ${book.availableCount} + '. '"></span>
                         <span th:text="'Available: ' + ${book.available} + '. '"></span>
                     </h6>
-                    <div class="text-md-start">
-                        <a class="btn btn-secondary btn-sm mt-2" th:href="'/books/' + ${book.id}">More info...</a>
+
+                    <h6 class="text-sm-start mt-sm-4" th:text="'Created: ' + ${book.created}"></h6>
+                    <h6 class="text-sm-start" th:text="'Updated: ' + ${book.updated}"></h6>
+                    <h6 class="text-sm-start mt-sm-4" th:text="'Rating: ' + ${book.rating}"></h6>
+
+                    <div th:if="${book.isAvailable()}">
+                    <!-- Button trigger modal - subscription -->
+                    <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#subscriptionForm">
+                        Booking this book
+                    </button>
+
+                    <!-- Modal -->
+                    <div class="modal fade" id="subscriptionForm" tabindex="-1" aria-labelledby="subscriptionFormLabel" aria-hidden="true">
+                        <div class="modal-dialog">
+                            <div class="modal-content">
+                                <div class="modal-header">
+                                    <h5 class="modal-title" id="subscriptionFormLabel">Booking</h5>
+                                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                                </div>
+                                <div class="modal-body">
+                                    <h5 class="modal-title" th:text="${book.title}"></h5>
+                                    <h6 class="modal-title" th:text="'Available count: ' + ${book.availableCount} + '. '"></h6>
+                                    <form class="row g-3 mt-1" action="#" th:action="@{/subscription}" method="post">
+                                        <div class="col-auto">
+                                            <label for="bookId" class="form-label visually-hidden">Book Id</label>
+                                            <input type="text" id="bookId" name="bookId" class="form-control visually-hidden"
+                                                   th:value="${book.id}"
+                                                   placeholder="Book Id" required autofocus>
+                                        </div>
+                                        <div class="col-auto">
+                                            <label for="count" class="form-label visually-hidden">Count</label>
+                                            <input type="number" id="count" name="count" class="form-control"
+                                                   th:value="1"
+                                                   placeholder="Count" required autofocus>
+                                        </div>
+                                        <div class="col-auto">
+                                            <button class="btn btn-primary" type="submit">Booking</button>
+                                        </div>
+                                    </form>
+                                </div>
+                                <div class="modal-footer">
+                                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                     </div>
                 </th>
-            </tr>
-
-            <tr>
-
             </tr>
             </tbody>
         </table>
